manifests/deployment-nodejs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-express-mongodb-app
  name: nodejs-express-mongodb-app
  namespace: onlinesystem
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodejs-express-mongodb-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nodejs-express-mongodb-app
    spec:
      containers:
        - env:
          image: raulrobinson/nodejs-express-mongodb:v1
          imagePullPolicy: Always
          name: nodejs-express-mongodb-app
          ports:
            - containerPort: 8080
              name: 8080tcp01
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-express-mongodb-app
  labels:
    app: nodejs-express-mongodb
spec:
  containers:
    - name: nodejs-express-mongodb-app
      image: raulrobinson/nodejs-express-mongodb:v1
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-express-mongodb-service
  namespace: onlinesystem
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: nodejs-express-mongodb-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-express-mongodb-ingress
  namespace: onlinesystem
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - 20.42.34.38
      secretName: ingress-tls-csi
  rules:
    - http:
        paths:
          - path: /api/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-express-mongodb-service
                port:
                  number: 8080
